--- a/exercise.html
+++ b/exercise.html
@@ -17,7 +17,7 @@
       font-family: Roboto, Arial;
     }
     .name {
-      font-size: 18px;
+      font-size: 15px;
       font-weight: bold;
       margin-bottom: 5px;
     }
@@ -29,6 +29,7 @@
 
     .content {
       color: rgb(96, 96, 96);
+      font-size: 12px;
     }
 
     .profile-picture {
@@ -52,25 +53,62 @@
     }
     .paragraph-div {
       display: inline-block;
-      margin-right: 150px;
+      margin-right: 130px;
       margin-left: 7px;
+      width: 100px;
     }
     .btn-div {
       display: inline-block;
       vertical-align: middle;
     }
+    .the-animal1 {
+      font-size: 15px;
+      color: rgb(96, 96, 96);
+      margin-bottom: 5px;
+    }
+    /* .supermain-div {
+      display: inline-block;
+      width: 400px;
+      height: 100px;
+    } */
   </style>
   <body>
-    <div class="main-div">
-      <div class="picture-div">
-        <img class="profile-picture" src="channel-pictures/channel-1.jpeg" />
+    <div class="supermain-div">
+      <div class="main1-div">
+        <div class="picture-div">
+          <img class="profile-picture" src="channel-pictures/channel-1.jpeg" />
+        </div>
+        <div class="paragraph-div">
+          <p class="name">oliver</p>
+          <p class="the-animal">the cat</p>
+          <p class="content">Popular</p>
+        </div>
+        <div class="btn-div"><button class="btn-follow">Follow</button></div>
       </div>
-      <div class="paragraph-div">
-        <p class="name">oliver</p>
-        <p class="the-animal">the cat</p>
-        <p class="content">Popular</p>
+
+      <div class="main2-div">
+        <div class="picture-div">
+          <img class="profile-picture" src="channel-pictures/channel-2.jpeg" />
+        </div>
+        <div class="paragraph-div">
+          <p class="name">Mimi</p>
+          <p class="the-animal">Sleepy cat</p>
+          <p class="content">Popular</p>
+        </div>
+        <div class="btn-div"><button class="btn-follow">Follow</button></div>
       </div>
-      <div class="btn-div"><button class="btn-follow">Follow</button></div>
+
+      <div class="main3-div">
+        <div class="picture-div">
+          <img class="profile-picture" src="channel-pictures/channel-1.jpeg" />
+        </div>
+        <div class="paragraph-div">
+          <p class="name">Rex</p>
+          <p class="the-animal1">Happy Bulldog</p>
+          <p class="content">Popular</p>
+        </div>
+        <div class="btn-div"><button class="btn-follow">Follow</button></div>
+      </div>
     </div>
   </body>
 </html>
