Add more changes

--- a/exercise.html
+++ b/exercise.html
@@ -35,7 +35,7 @@
     .profile-picture {
       width: 65px;
       border-radius: 50%;
-      display: inline-block;
+      /* display: inline-block; */
     }
 
     .btn-follow {
@@ -49,17 +49,17 @@
       height: 30px;
       margin-bottom: 40px;
     }
-    .picture-div {
+    /* .picture-div {
       display: inline-block;
-    }
+    } */
     .paragraph-div {
-      display: inline-block;
+      /* display: inline-block; */
       margin-right: 130px;
       margin-left: 7px;
       width: 100px;
     }
     .btn-div {
-      display: inline-block;
+      /* display: inline-block; */
       vertical-align: middle;
     }
     .the-animal1 {
@@ -67,48 +67,63 @@
       color: rgb(96, 96, 96);
       margin-bottom: 5px;
     }
-    /* .supermain-div {
-      display: inline-block;
-      width: 400px;
-      height: 100px;
-    } */
+
+    .profile-grid {
+      display: grid;
+      grid-template-columns: 50px 50px 50px;
+    }
   </style>
   <body>
-    <div class="supermain-div">
-      <div class="main1-div">
-        <div class="picture-div">
-          <img class="profile-picture" src="channel-pictures/channel-1.jpeg" />
+    <div class="profile-grid">
+      <div class="supermain-div">
+        <div class="main1-div">
+          <div class="picture-div">
+            <img
+              class="profile-picture"
+              src="channel-pictures/channel-1.jpeg"
+            />
+          </div>
+          <div class="paragraph-div">
+            <p class="name">oliver</p>
+            <p class="the-animal">the cat</p>
+            <p class="content">Popular</p>
+          </div>
+          <div class="btn-div">
+            <a href="https://supersimple.dev/exercises/youtube" target="_blank"
+              ><button class="btn-follow">Follow</button></a
+            >
+          </div>
         </div>
-        <div class="paragraph-div">
-          <p class="name">oliver</p>
-          <p class="the-animal">the cat</p>
-          <p class="content">Popular</p>
-        </div>
-        <div class="btn-div"><button class="btn-follow">Follow</button></div>
-      </div>
 
-      <div class="main2-div">
-        <div class="picture-div">
-          <img class="profile-picture" src="channel-pictures/channel-2.jpeg" />
+        <div class="main2-div">
+          <div class="picture-div">
+            <img
+              class="profile-picture"
+              src="channel-pictures/channel-2.jpeg"
+            />
+          </div>
+          <div class="paragraph-div">
+            <p class="name">Mimi</p>
+            <p class="the-animal">Sleepy cat</p>
+            <p class="content">Popular</p>
+          </div>
+          <div class="btn-div"><button class="btn-follow">Follow</button></div>
         </div>
-        <div class="paragraph-div">
-          <p class="name">Mimi</p>
-          <p class="the-animal">Sleepy cat</p>
-          <p class="content">Popular</p>
-        </div>
-        <div class="btn-div"><button class="btn-follow">Follow</button></div>
-      </div>
 
-      <div class="main3-div">
-        <div class="picture-div">
-          <img class="profile-picture" src="channel-pictures/channel-1.jpeg" />
+        <div class="main3-div">
+          <div class="picture-div">
+            <img
+              class="profile-picture"
+              src="channel-pictures/channel-1.jpeg"
+            />
+          </div>
+          <div class="paragraph-div">
+            <p class="name">Rex</p>
+            <p class="the-animal1">Happy Bulldog</p>
+            <p class="content">Popular</p>
+          </div>
+          <div class="btn-div"><button class="btn-follow">Follow</button></div>
         </div>
-        <div class="paragraph-div">
-          <p class="name">Rex</p>
-          <p class="the-animal1">Happy Bulldog</p>
-          <p class="content">Popular</p>
-        </div>
-        <div class="btn-div"><button class="btn-follow">Follow</button></div>
       </div>
     </div>
   </body>
