--- a/flexbox.html
+++ b/flexbox.html
@@ -3,7 +3,7 @@
   <head>
     <title>Flexbox Practice</title>
   </head>
-  <body style="padding-bottom: 700px">
+  <body style="padding-bottom: 700px; background-color: rgb(20, 20, 40)">
     <div style="display: flex; flex-direction: row">
       <div style="background-color: lightblue">div 1 text</div>
       <div style="background-color: lightpink">
