--- a/grid.html
+++ b/grid.html
@@ -5,7 +5,7 @@
   </head>
   <body style="padding-bottom: col1">
     <div style="display: grid; grid-template-columns: 100px 100px">
-      <div style="background-color: lightblue">Div 1</div>
+      <div style="background-color: lightgray">Div 1</div>
       <div style="background-color: lightpink">
         Div 2
         <p>text</p>
